fix horizontal scroll

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -19,13 +19,18 @@
     font-family: 'Rubik';
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 /* :root:not([data-theme]) {
     --pico-background-color: rgb(98, 209, 113);
     --pico-color: rgb(223, 223, 223);
 } */
 
 .responsive_container:hover {
-    transform: scale(1.15, 1.15);
+    transform: scale(1.1);
 }
 
 .humble,
